--- a/app/Views/css/default.css
+++ b/app/Views/css/default.css
@@ -1183,14 +1183,9 @@ input:checked+.slider-dark-mode:before {
 .width-100{
 	width: 100%;
 }
-.btn-outline-success, .btn-outline-info, .btn-outline-secondary, .btn-outline-primary, .btn-outline-warning{
-	font-weight: 500;
-}
-.btn-outline-warning{
-	color: #252525;
-}
 .versao-sistema{
 	font-size: 0.7rem;
 	text-align: center;
 	margin: 0;
+	color: rgb(224, 224, 224);
 }
